--- a/fonecmid-diplom/src/DataProcessors/ВКМ_МассовоеСозданиеАктов/Forms/Форма/Form.form
+++ b/fonecmid-diplom/src/DataProcessors/ВКМ_МассовоеСозданиеАктов/Forms/Форма/Form.form
@@ -5,7 +5,7 @@
     <id>28</id>
     <items xsi:type="form:FormField">
       <name>Период</name>
-      <id>1</id>
+      <id>36</id>
       <visible>true</visible>
       <enabled>true</enabled>
       <userVisible>
@@ -16,7 +16,7 @@
       </dataPath>
       <extendedTooltip>
         <name>ПериодРасширеннаяПодсказка</name>
-        <id>3</id>
+        <id>38</id>
         <type>Label</type>
         <autoMaxWidth>true</autoMaxWidth>
         <autoMaxHeight>true</autoMaxHeight>
@@ -26,11 +26,11 @@
       </extendedTooltip>
       <contextMenu>
         <name>ПериодКонтекстноеМеню</name>
-        <id>2</id>
+        <id>37</id>
         <autoFill>true</autoFill>
       </contextMenu>
       <type>InputField</type>
-      <editMode>EnterOnInput</editMode>
+      <editMode>Enter</editMode>
       <showInHeader>true</showInHeader>
       <headerHorizontalAlign>Left</headerHorizontalAlign>
       <showInFooter>true</showInFooter>
